--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,26 +1,64 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="@drawable/morgana_vs_ahri_3">
 
-    <fragment android:name="com.mpsp.spyros.loluniverse.HeaderFragment"
+
+    <fragment
         android:id="@+id/header"
-        android:layout_weight="1"
+        android:name="com.mpsp.spyros.loluniverse.HeaderFragment"
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:layout_weight="1"
         tools:layout="@layout/fragment_header" />
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/selectHelp"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Champions"
-        android:id="@+id/textView"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_below="@id/header"/>
+        android:background="#96000000"
+        android:textColor="#FFFFFF"
+        android:layout_below="@+id/header"
+        android:layout_centerHorizontal="true" />
 
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_below="@+id/textView">
 
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingBottom="@dimen/activity_vertical_margin"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin">
+
+            <Button
+                android:id="@+id/champButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="22dp"
+                android:text="@string/Champions" />
+
+            <Button
+                android:id="@+id/serversButton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignLeft="@+id/champButton"
+                android:layout_alignStart="@+id/champButton"
+                android:layout_below="@+id/champButton"
+                android:layout_marginTop="10dp"
+                android:text="@string/RegionStatus" />
+        </RelativeLayout>
+    </ScrollView>
 </RelativeLayout>
