--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,15 +1,15 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-
+<!--
     <CheckBoxPreference
         android:key="example_checkbox"
         android:title="@string/pref_title_social_recommendations"
         android:summary="@string/pref_description_social_recommendations"
-        android:defaultValue="true" />
+        android:defaultValue="true" />-->
 
     <!-- NOTE: EditTextPreference accepts EditText attributes. -->
     <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
     <EditTextPreference
-        android:key="example_text"
+        android:key="summoner_text"
         android:title="@string/pref_title_display_name"
         android:defaultValue="@string/pref_default_display_name"
         android:selectAllOnFocus="true"
@@ -20,13 +20,22 @@
 
     <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
          dismiss it. -->
-    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
+    <!-- NOTE: ListPreference's summary should be set to its value by the activity code.
     <ListPreference
         android:key="example_list"
         android:title="@string/pref_title_add_friends_to_messages"
         android:defaultValue="-1"
         android:entries="@array/pref_example_list_titles"
         android:entryValues="@array/pref_example_list_values"
+        android:negativeButtonText="@null"
+        android:positiveButtonText="@null" /> -->
+
+    <ListPreference
+        android:key="language_list"
+        android:title="@string/pref_title_languages"
+        android:defaultValue="en_US"
+        android:entries="@array/pref_example_list_languages"
+        android:entryValues="@array/pref_example_list_languages_values"
         android:negativeButtonText="@null"
         android:positiveButtonText="@null" />
 
