--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -18,6 +18,15 @@
         android:singleLine="true"
         android:maxLines="1" />
 
+    <ListPreference
+        android:key="server_list"
+        android:title="@string/pref_title_regions"
+        android:defaultValue="NA"
+        android:entries="@array/pref_example_list_regions"
+        android:entryValues="@array/pref_example_list_regions_values"
+        android:negativeButtonText="@null"
+        android:positiveButtonText="@null" />
+
     <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
          dismiss it. -->
     <!-- NOTE: ListPreference's summary should be set to its value by the activity code.
