--- a/app/src/main/res/layout/activity_champion_list.xml
+++ b/app/src/main/res/layout/activity_champion_list.xml
@@ -20,10 +20,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/championsGridView"
-        android:layout_below="@+id/header"
-        android:layout_marginTop="46dp"
-        android:layout_alignRight="@+id/header"
-        android:layout_alignEnd="@+id/header"
         android:background="#96000000"
         android:numColumns="auto_fit"
         android:columnWidth="90dp"
@@ -31,6 +27,20 @@
         android:verticalSpacing="10dp"
         android:gravity="center"
         android:stretchMode="columnWidth"
-        />
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignRight="@+id/header"
+        android:layout_alignEnd="@+id/header"
+        android:layout_below="@+id/header" />
+
+    <CheckBox
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="F2P"
+        android:id="@+id/checkBox"
+        android:layout_alignBottom="@+id/header"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:checked="true"/>
 
 </RelativeLayout>
