--- a/app/src/main/res/layout/champion_item.xml
+++ b/app/src/main/res/layout/champion_item.xml
@@ -1,14 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:padding="5dp"
     >
 
+
     <ImageView
         android:id="@+id/grid_item_image"
-        android:layout_width="50px"
-        android:layout_height="50px"
+        android:layout_width="250px"
+        android:layout_height="250px"
         android:layout_marginRight="10px"></ImageView>
 
-</LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Medium Text"
+        android:id="@+id/championTitle"
+        android:layout_below="@id/grid_item_image"
+        android:textColor="#FFFFFF"/>
+
+</RelativeLayout>
