--- a/app/src/main/res/layout/activity_champion_details.xml
+++ b/app/src/main/res/layout/activity_champion_details.xml
@@ -1,12 +1,110 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/background_dark"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.mpsp.spyros.loluniverse.ChampionDetailsActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" android:id="@+id/test" />
+
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/champion"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Champion"
+                android:textColor="@android:color/holo_red_light"
+                android:textSize="50dp" />
+
+            <ImageView
+                android:id="@+id/championThumb"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/champion"
+                android:background="@android:color/holo_red_light" />
+
+            <TextView
+                android:id="@+id/skins"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/championThumb"
+                android:layout_marginLeft="15dp"
+                android:layout_toEndOf="@+id/championThumb"
+                android:layout_toRightOf="@+id/championThumb"
+                android:text="skins"
+                android:textColor="@android:color/holo_red_light"
+                android:textSize="30dp" />
+
+            <Spinner
+                android:id="@+id/spinner"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/skins"
+                android:layout_marginLeft="15dp"
+                android:layout_toEndOf="@+id/championThumb"
+                android:layout_toRightOf="@+id/championThumb" />
+
+            <ImageView
+                android:id="@+id/skinImage"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentLeft="true"
+                android:layout_alignParentStart="true"
+                android:layout_below="@+id/championThumb"
+                android:layout_marginTop="20dp"
+                android:background="@android:color/holo_red_light" />
+
+            <TextView
+                android:id="@+id/textView2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignTop="@+id/skinImage"
+                android:layout_marginLeft="15dp"
+                android:layout_toRightOf="@+id/skinImage"
+                android:text="Lore"
+                android:textColor="@android:color/holo_red_light"
+                android:textSize="35dp" />
+
+            <ScrollView
+                android:id="@+id/scrollViewLore"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textView2"
+                android:layout_marginLeft="15dp"
+                android:layout_toRightOf="@+id/skinImage">
+
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/loreContent"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="content"
+                        android:textColor="@android:color/white"
+                        android:textSize="18dp" />
+                </RelativeLayout>
+            </ScrollView>
+
+
+        </RelativeLayout>
+    </ScrollView>
+
 
 </RelativeLayout>
