champion gridview to fill parent height

--- a/app/src/main/res/layout/activity_champion_list.xml
+++ b/app/src/main/res/layout/activity_champion_list.xml
@@ -18,7 +18,7 @@
 
     <GridView
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="match_parent"
         android:id="@+id/championsGridView"
         android:background="#96000000"
         android:numColumns="3"
