--- a/app/src/main/res/layout/skin_spinner_item.xml
+++ b/app/src/main/res/layout/skin_spinner_item.xml
@@ -6,4 +6,5 @@
     android:gravity="left"
     android:padding="5dip"
     android:textColor="#FF0000"
-    android:textSize="18dp" />
+    android:textSize="18dp"
+    />
