--- a/app/src/main/res/layout/shard_item.xml
+++ b/app/src/main/res/layout/shard_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent" android:id="@+id/shardItemHolder">
 
     <TextView
         android:layout_width="100dp"
@@ -31,7 +31,7 @@
         android:text=""
         android:textSize="15dp"
         android:layout_toRightOf="@+id/regionStatus"
-        android:textColor="@android:color/holo_red_light"
+        android:textColor="@android:color/primary_text_dark_nodisable"
         />
 
     <View
